# legkilo-dataset

./: README.md
figure/: readme.txt
kalman_go1/: CMakeLists.txt  package.xml
kalman_go1/config/: go1.yaml
kalman_go1/launch/: pubLegEF.launch  pub_highstate.launch
kalman_go1/src/exe/: pub_highstate.cpp  pub_kf.cpp
unitree_legged_sdk/: CMakeLists.txt
